Aula 05 - Promises e chamadas http

--- a/crud/index.html
+++ b/crud/index.html
@@ -138,6 +138,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="service.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
